--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
