--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-persist-client": "^4.35.3",
+    "apisauce": "^3.0.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.get": "^4.4.2",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-toast-message": "^2.1.6"
