--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "lodash.get": "^4.4.2",
     "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-native": "0.72.3",
     "react-native-modal": "^13.0.1",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-toast-message": "^2.1.6"
