--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.9.0",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
+    "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
